# devi-connect-reports

./: README.md  pyproject.toml  reports.json  requirements.txt
reports/: fields.py  utils.py
reports/poc_report/: README.md  entrypoint.py
reports/poc_report/templates/pdf/: template.html.j2
reports/poc_report/templates/xlsx/: template.xlsx
tests/: __init__.py  conftest.py  test_devi_connect_reports.py  test_poc_report.py
tests/fixtures/: poc_response.json
