[tool.poetry]
name = "devi_connect_reports"
version = "0.0.1"
description = "CloudBlue Connect Reports for Devi"
authors = ["TCCT"]
packages = [
    { include = "reports" }
]
readme = "./README.md"
exclude = [
    "tests",
]

[tool.poetry.dependencies]
python = "3.10.6"
connect-openapi-client = "25.16"
openpyxl = "3.0.10"

[tool.poetry.dev-dependencies]
connect-cli = "26.13"
pytest = "7.2.0"
pytest-cov = "4.0.0"
pytest-mock = "3.10.0"
responses = "0.22.0"
coverage = {extras = ["toml"], version = "5.3.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--cov=reports --cov-report=term-missing:skip-covered --cov-report=html --cov-report=xml --cov-report term"

[tool.coverage.run]
branch = true

[tool.coverage.report]
omit = [
]

exclude_lines = [
    "pragma: no cover",
    "def __str__",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]